--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
         section {
             margin-bottom: 30px;
         }
+        img {
+            display: block;
+            max-width: 100%;
+            height: auto;
+            margin: 15px auto;
+            border-radius: 10px;
+            box-shadow: 0 0 6px rgba(0,0,0,0.2);
+        }
         footer {
             background: #0c2d57;
             color: white;
@@ -68,6 +76,7 @@
             <p>
                 El capítulo 9 de la Guía del PMBOK® se enfoca en la gestión de los recursos humanos del proyecto, es decir, en los procesos que organizan, gestionan y conducen al equipo del proyecto. El éxito de un proyecto no solo depende de una buena planificación técnica, sino también de una adecuada gestión del capital humano involucrado.
             </p>
+            <img src="1.png" alt="Introducción a la gestión de recursos humanos del proyecto">
         </section>
 
         <section id="procesos">
@@ -81,6 +90,7 @@
                 <li><strong>Desarrollar el equipo del proyecto:</strong> Se enfoca en mejorar las competencias, la interacción del equipo y el ambiente general del equipo para mejorar el desempeño del proyecto.</li>
                 <li><strong>Dirigir al equipo del proyecto:</strong> Implica hacer seguimiento al desempeño de los miembros del equipo, dar retroalimentación, resolver problemas y coordinar los cambios para mejorar el rendimiento.</li>
             </ul>
+            <img src="2.jpg" alt="Procesos de gestión de recursos humanos">
         </section>
 
         <section id="roles">
@@ -104,6 +114,7 @@
                 <li><strong>Habilidades interpersonales:</strong> Liderazgo, influencia, toma de decisiones, comunicación efectiva y gestión de conflictos.</li>
                 <li><strong>Evaluaciones individuales:</strong> Retroalimentación formal e informal.</li>
             </ul>
+            <img src="3.jpg" alt="Técnicas y herramientas para gestionar equipos de proyecto">
         </section>
 
         <section id="conclusiones">
